Airflow/logs/dag_id=pronostico_tiempo_dag1/run_id=manual__2023-10-17T14:41:40.258028+00:00/task_id=crear_tabla_raw/attempt=1.log
[2023-10-17T14:41:55.645+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: pronostico_tiempo_dag1.crear_tabla_raw manual__2023-10-17T14:41:40.258028+00:00 [queued]>
[2023-10-17T14:41:55.664+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: pronostico_tiempo_dag1.crear_tabla_raw manual__2023-10-17T14:41:40.258028+00:00 [queued]>
[2023-10-17T14:41:55.665+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-10-17T14:41:55.727+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): crear_tabla_raw> on 2023-10-17 14:41:40.258028+00:00
[2023-10-17T14:41:55.739+0000] {standard_task_runner.py:57} INFO - Started process 439 to run task
[2023-10-17T14:41:55.744+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'pronostico_tiempo_dag1', 'crear_tabla_raw', 'manual__2023-10-17T14:41:40.258028+00:00', '--job-id', '129', '--raw', '--subdir', 'DAGS_FOLDER/tiempo1.py', '--cfg-path', '/tmp/tmpt1ieaai1']
[2023-10-17T14:41:55.749+0000] {standard_task_runner.py:85} INFO - Job 129: Subtask crear_tabla_raw
[2023-10-17T14:41:55.890+0000] {task_command.py:416} INFO - Running <TaskInstance: pronostico_tiempo_dag1.crear_tabla_raw manual__2023-10-17T14:41:40.258028+00:00 [running]> on host f314a0c7455b
[2023-10-17T14:41:56.203+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Gustavo Lavalle' AIRFLOW_CTX_DAG_ID='pronostico_tiempo_dag1' AIRFLOW_CTX_TASK_ID='crear_tabla_raw' AIRFLOW_CTX_EXECUTION_DATE='2023-10-17T14:41:40.258028+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-17T14:41:40.258028+00:00'
[2023-10-17T14:41:56.207+0000] {sql.py:274} INFO - Executing: 
CREATE TABLE IF NOT EXIST RAW (
    ciudad VARCHAR(50),
    fecha_hora VARCHAR(50), 
    pronostico_json JSONB
);
[2023-10-17T14:41:56.226+0000] {base.py:73} INFO - Using connection ID 'mi_conexion_postgres' for task execution.
[2023-10-17T14:41:56.244+0000] {base.py:73} INFO - Using connection ID 'mi_conexion_postgres' for task execution.
[2023-10-17T14:41:56.252+0000] {sql.py:418} INFO - Running statement: 
CREATE TABLE IF NOT EXIST RAW (
    ciudad VARCHAR(50),
    fecha_hora VARCHAR(50), 
    pronostico_json JSONB
);, parameters: None
[2023-10-17T14:41:56.255+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXIST"
LINE 2: CREATE TABLE IF NOT EXIST RAW (
                            ^

[2023-10-17T14:41:56.342+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=pronostico_tiempo_dag1, task_id=crear_tabla_raw, execution_date=20231017T144140, start_date=20231017T144155, end_date=20231017T144156
[2023-10-17T14:41:56.540+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 129 for task crear_tabla_raw (syntax error at or near "EXIST"
LINE 2: CREATE TABLE IF NOT EXIST RAW (
                            ^
; 439)
[2023-10-17T14:41:56.573+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-17T14:41:56.635+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
